--- a/beta/assets/scss/footer.scss
+++ b/beta/assets/scss/footer.scss
@@ -1,5 +1,6 @@
 @import "util";
 #footer {
+  bottom: 0;
   position: relative;
   color: $white;
   background-color: $gray;
