--- a/beta/assets/scss/welcome.scss
+++ b/beta/assets/scss/welcome.scss
@@ -11,6 +11,7 @@ body {
 }
 
 #welcome {
+  display: block;
   color: $white;
   background-attachment: fixed;
   background-color: $black;
